# Compiler_Project

./: CMakeLists.txt  README.md  main.cpp
Automaton/: Automaton.java  Conversion.java  Utilities.java
Creation/: InfixToPostfix.java  LexicalRulesParser.java  Parsing.java
data/: final.txt  parsing_table.txt  priorities.txt
inputs/: CFG_input_file.txt  lexical_rules.txt  temp_file.txt  temp_program.txt  temp_rules.txt  test_program.txt
output/: token_list.txt  tokens.txt
phase_one/Automaton/: Automaton.cpp  Automaton.h  Conversions.cpp  Conversions.h  State.cpp  State.h  Utilities.cpp  Utilities.h
phase_one/automaton/: Automaton.cpp  Automaton.h  Conversions.cpp  Conversions.h  State.cpp  Types.h  Utilities.cpp  Utilities.h
phase_one/creation/: Constants.cpp  Constants.h  InfixToPostfix.cpp  InfixToPostfix.h  LexicalRulesHandler.cpp  LexicalRulesHandler.h  ToAutomaton.cpp  ToAutomaton.h
phase_one/prediction/: Predictor.cpp  Predictor.h
phase_two/: FirstFollow.cpp  FirstFollow.h  Parse.cpp  Parse.h  Parser.cpp  ReadCFG.cpp  ReadCFG.h  Table.cpp  Table.h
phase_two/read/: ReadCFG.cpp
